lab1/Test/L1-A-7-75.cmm
struct roDSws ;
int ;
int ;
float tB2 [ 2026051511 ] 
;
int McP ( ) {
  if ( vsBA_KTCe1Ql5zJH7R )   return zddZ2_4lHHi || 
    lkQ9anuJUBr09nmb && eO + cq * - ! zB ( xo5X = DkDapFSlPZ1wiYR9GsZj 
    != iHzZir [ kNRByAfcsf4ysmi9i || IPIwEgjNIi <= eqy6FVZlo_ 
    - ( d86z > - eyjmMHwUmnDBbA [ YehZQ9c8eK || _HekS 
    && no < ! QfZRPlcGxqqKXH0OyWDl [ h8wA2j5F9u7 = S2URFRLpvo4 
    == ehw8jtj / X ( mtw8re7RswW7h , Hl0t36kmgv1h7zzF6xAu 
    , Vws >= vR0DG ) * NCbI509EyqqJMgyD6Wy ] + UdOP47J 
    * 526296175 ] * ! 1442853619.130408777 ) ] / - - - 
    ! PcHLe7OYQC62CXRl ( ) ) . s0b2yKZxqYnj4WDa ;

}
int ;
int wz69HQpJ ( ) {
  if ( Ajua3E22VOJ_JncG )   if ( hU5a0r6JNtcG7t7xv 
    )   pFXQHnvU6iLJ6NZihir8 ;
else {
  }
else   if ( MPihDdUb2m )   if ( X )   while ( _Y_56u7s3QE9S7rddWA 
    )   s ;




}
int AIoI73Y ( int KlSEQg5iilDgXnBqXYV , int DKnX4 
  ) {
  int hwsgqhO ;
  struct {
    struct J1 {
      struct uz9SROLd9E $iAm ;
      int I6f ;
    }k8w ;
    struct hM6j9CwfETf9Nyn s9Tf2GLTF ;
    struct xXzU67kM Y2n5_p ;
    int z8BSv4lT ;
  }omrm5n1cM ;
  int WxRajsBLrpt ;
  int eQNz2qH67 ;
  int fJH_68 , Ssweh = DuHBIKQ6oYjrO ;
  struct {
  }vETsBz0M5I ;
}
int ;
int ;
int ;
int ;
int ;
int \;
int ;
int ;
int ZlNCoegUUQd , Ld4M6NfCr8Y_HkCY6 

;
